--- a/assets/style.css
+++ b/assets/style.css
@@ -5,53 +5,137 @@
     --Dull: #bccce0;
     --Rosy: #bf98A0;
     --delft: #1d3461; 
+    --mint: #09BC8A;
+    --LightG: #61e786;
+}
+
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 
 body{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 1.75rem;
-    line-height: 1.5;
     color: var(--delft);
     background-color: var(--Dull);
 }
 
 header{
-    display: inline-block;
+    display:flex;
     width: 100%;
-    margin: 0 auto;
     background-color: var(--jet);
 }
 
+main{
+    display: block;
+    flex-wrap: nowrap;
+}
+
 header nav{
-    padding-top: 15px;
-    margin-right: 20px;
-    float: inline-end;
+    padding: 15px;
 }
 
 header nav ul li{
-    display: inline-block;
+    display: inline-flex;
     margin-left: 25px;
     font-size: 20px;
     color:var(--Uranian);
-    text-decoration: underline;
+    text-decoration:underline;
+    text-underline-offset: 10px;
+}
+section{
+    width: 90%;
+    display: flex;
+    margin: 60px auto;
 }
 
 h1{
-    text-align: start;
     background-color: var(--Uranian);
-    color:var(--delft)
-
+    color:var(--delft);
 }
-
-h2{
-    text-align:right;
-    background-color: var(--Uranian);
-    font-size: large;
+h3{
+    border-style: solid;
+    border-width: 5px;
+    border-left: var(--delft);
+    border-bottom: 0;
+    border-top: 0;
+    text-align: end;
+    flex-wrap: wrap;
+    font-size: 60px;
 }
 
 p{
     color: var(--delft);
     font-size: small;
+    padding: 10px;
+}
+section{
+    display: flex;
+    flex-wrap: wrap;
 }
 
+section ul li{
+        display: inline-flex;
+        margin-left: 25px;
+        font-size: 20px;
+        color:var(--delft);
+        text-decoration:underline;
+        text-underline-offset: 10px;
+        align-items: center;
+}
+div img{
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    object-fit: cover;
+    flex: 2 1 200px;
+}
+img{
+    width: 100%;
+    max-width: 1000px;
+}
+
+/* These are the classes */
+
+.main-header {
+    display: flex;
+    justify-content: space-between;
+    padding: 10px;
+
+}
+
+
+.column {
+    padding: 10px;
+  }
+  
+  .left {
+    width: 25%;
+  }
+  
+  .right {
+    width: 75%;
+  }
+
+.card{
+    display: block;
+    flex-wrap: wrap;
+    flex: 2 1 200px;
+    border-style: solid;
+    border-width: 5px;
+    border-color: var(--LightG);
+    background-color: var(--Rosy);
+    margin: 20px;
+}
+
+.contact-me{
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: 10px;
+    font-size: 20px;
+    color:var(--delft);
+    text-decoration:underline;
+    text-underline-offset: 10px;
+}
 
