--- a/assets/style.css
+++ b/assets/style.css
@@ -16,7 +16,7 @@
 }
 
 body{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     color: var(--delft);
     background-color: var(--Dull);
     width: 100%;
@@ -31,33 +31,56 @@ header{
 
 header nav ul li{
     display: inline-flex;
+}
+
+header nav ul li a {
     margin-left: 5px;
     font-size: 20px;
     color:var(--Uranian);
     text-decoration:underline;
     text-underline-offset: 10px;
     padding: 10px;
+    padding-top: 25px;
 }
+
 h1{
     background-color: var(--Uranian);
     color:var(--delft);
     padding-left: 100px;
     padding-right: 10px;
+    padding-top: 5px;
+    padding-bottom: 5px;
     background-size: fill;
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin-top: 15px;
+    margin-bottom: 15px;
 }
-
+div{
+    position:relative;
+}
 div img{
     margin: 0;
     padding: 0;
     width: 100%;
-    height: 200px;
+    height: 250px;
     display: block;
     object-fit: cover;
     flex: 2 1 200px;
 }
-
+.Tundra{
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    background-color: var(--Uranian);
+    color:var(--delft);
+    padding-right: 55px;
+    padding-left: 10px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    background-size: fill;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    font-size: 25px;
+}
 main{
     flex-wrap: nowrap;
 }
@@ -94,6 +117,11 @@ section ul li{
         flex-wrap: wrap;
 }
 
+footer h5{
+    padding: 35px;
+    margin: 10px;
+    align-items: center;
+}
 
 /* These are the classes */
 
@@ -201,9 +229,11 @@ section ul li{
     display: flex;
     flex-wrap: wrap;
     margin-left: 10px;
+    margin-bottom: 15px;
     font-size: 20px;
     color:var(--delft);
     text-decoration:underline;
     text-underline-offset: 10px;
 }
+
 
