--- a/assets/style.css
+++ b/assets/style.css
@@ -243,4 +243,53 @@ section ul li{
 
 .contact-me a{
     color:var(--delft);
+    text-decoration:underline;
+    text-underline-offset: 10px;
 }
+
+@media screen and (max-width: 1000px) {
+    h1 {
+      font-size:35px;
+    }
+    h3{
+        font-size: 25px;
+    }
+    h4{
+        font-size: 25px;
+    }
+    .top-work-box{
+        max-width: 60%;
+        top: 75px;
+    }
+    .work-box{
+        max-width: 60%;
+        top: 35px
+    }
+    .contact-me {
+        flex-direction: column;
+        line-height: 30px;
+        font-size: 10px;
+    }
+}  
+
+@media screen and (max-width: 768px) {
+    header nav ul li a {
+        display:flex;
+        flex-direction: column;
+        font-size: 15px;
+      
+    }
+}
+@media screen and (max-width: 576px) {
+    section card div p {
+        display: none;
+    }
+    .top-work-box{
+        max-width: 50%;
+        top: 65px;
+    }
+    .work-box{
+        max-width: 75%;
+        top: 15px;
+    }
+}  
