--- a/assets/style.css
+++ b/assets/style.css
@@ -42,6 +42,7 @@ header nav ul li a {
 h1{
     background-color: var(--Dull);
     color:var(--delft);
+    border-width: 2px;
     padding: 5px 10px 5px 100px;
     background-size: fill;
     margin-top: 15px;
@@ -51,7 +52,7 @@ h1{
     border-style: dashed;
     border-left: 0px;
 }
-/* Image and cool subtitle */
+/* header & profile image with cool subtitle */
 div{
     position:relative;
 }
@@ -63,6 +64,26 @@ div img{
     display: block;
     object-fit: cover;
 }
+
+.profile-image{
+    position:fixed;
+    bottom: 0;
+    left: 0;
+    padding: 15px 25px 15px 45px;
+    margin-top: 5px;
+    margin-bottom: 245px;
+}
+
+.profile-image img{
+    display: flex;
+    width: 15%;
+    height: auto;
+    border-radius: 10%;
+    border-style: dashed;
+    border-color: var(--mint);
+    border-width: 2px;
+    z-index:inherit;
+}
 .Tundra{
     position: absolute;
     bottom: 0;
@@ -71,6 +92,7 @@ div img{
     border-style: dashed;
     border-color: var(--mint);
     border-right: 0px;
+    border-width: 2px;
     color:var(--delft);
     padding: 5px 55px 5px 10px;
     background-size: fill;
@@ -78,14 +100,14 @@ div img{
     margin-bottom: 15px;
     font-size: 25px;
 }
-main{
-    flex-wrap: nowrap;
-}
+/* Flexbox identifiers */
+
 section{
     display: flex;
 }
 /* Left column titles */
 h3{
+    position: relative;
     border-style: solid;
     border-width: 5px;
     border-left: var(--delft);
@@ -96,10 +118,14 @@ h3{
     margin: 0px;
 }
 /* right hand paragraphs */
-p{
+
+.about-me-p{
+    display: block;
     color: var(--delft);
-    font-size: small;
-    padding: 10px;
+    font-size: 30px;
+    padding: 25px;
+    margin: 0;
+    position: relative;
 }
 /* Contact me list at the bottom */
 section ul li{
@@ -117,16 +143,15 @@ section ul li{
 .column {
     padding: 10px;
   }
-  
   .left {
     width: 25%;
   }
-  
   .right {
     width: 75%;
   }
 
 /* CSS Grid properties */
+
 #grid-area-work{
     grid-area: 1 / 1 / 4 / 2;
     padding: 10px;
@@ -149,13 +174,14 @@ section ul li{
 .grid-container{
     display: grid;
     width: 100%;
-    height: 55%;
+    height: auto;
     margin: 60px auto;
-    grid-template: 25% 15% 15% / 25% 5fr 5fr;
+    grid-template-columns: 25%;
+    grid-template-rows: 25% 15% 15% 0%;
 }
+
 .grid-card-properties{
     display: flex;
-    /* flex: 1; */
     position: relative;
     flex-direction:column;
     border-style: solid;
@@ -188,6 +214,14 @@ section ul li{
     color: var(--delft);
     background-color: var(--mint);
     font-size: 30px;
+}
+.top-work-box p{
+    display: flex;
+    font-size: 20px;
+}
+.work-box p{
+    display: flex;
+    font-size: 20px;
 }
 .grid-item{
     position: relative;
