--- a/assets/style.css
+++ b/assets/style.css
@@ -323,4 +323,34 @@ section ul li{
         max-width: 75%;
         top: 15px;
     }
-}  
+    .grid-container{
+        display: grid;
+        width: 100%;
+        height: 65%;
+        margin: 60px auto;
+        grid-template-columns: 25%;
+        grid-template-rows: 300px 140px 140px;
+
+    }  
+}
+@media screen and (max-width: 475px) {
+    .grid-container{
+        display: grid;
+        width: 100%;
+        height: 65%;
+        margin: 60px auto;
+        grid-template-columns: 25%;
+        grid-template-rows: 200px 100px 100px;
+
+    }  
+    .about-me-p{
+        font-size: 15px;
+    }
+    .Tundra{
+        font-size: 20px;
+    }
+    h3{
+        font-size: 20px;
+    }
+}
+
