--- a/assets/style.css
+++ b/assets/style.css
@@ -177,7 +177,7 @@ section ul li{
     height: 65%;
     margin: 60px auto;
     grid-template-columns: 25%;
-    grid-template-rows: 500px 300px 300px;
+    grid-template-rows: 400px 250px 250px;
 }
 
 .grid-card-properties{
@@ -281,6 +281,14 @@ section ul li{
         line-height: 30px;
         font-size: 10px;
     }
+    .grid-container{
+        display: grid;
+        width: 100%;
+        height: 65%;
+        margin: 60px auto;
+        grid-template-columns: 25%;
+        grid-template-rows: 300px 180px 180px;
+    }
 }  
 
 @media screen and (max-width: 768px) {
@@ -303,6 +311,14 @@ section ul li{
     }
     .about-me-p{
         font-size: 20px;
+    }
+    .grid-container{
+        display: grid;
+        width: 100%;
+        height: 65%;
+        margin: 60px auto;
+        grid-template-columns: 25%;
+        grid-template-rows: 240px 140px 140px;
     }
 
 }
@@ -329,7 +345,7 @@ section ul li{
         height: 65%;
         margin: 60px auto;
         grid-template-columns: 25%;
-        grid-template-rows: 300px 140px 140px;
+        grid-template-rows: 220px 140px 140px;
 
     }  
 }
