--- a/assets/style.css
+++ b/assets/style.css
@@ -365,8 +365,11 @@ section ul li{
     .Tundra{
         font-size: 20px;
     }
-    h3 h4{
+    h3{
         font-size: 20px;
+    }
+    h4{
+        font-size: 17px;
     }
 }
 
